# minimax

./: Cargo.toml  README.md  counter.py  plotter.py
src/: endgame.rs  interactive.rs  main.rs  mancala.rs  minimax.rs  tree.rs
src/backup/: mancala.rs  minimax.rs  transposition.rs  tree.rs
src/mancala/: endgames_table.rs  game_state.rs  interactive.rs  mancala_endgames_table.rs  mancala_game_state.rs  mod.rs  moves.rs
src/minimax/: endgames_table.rs  game_state.rs  mod.rs  solver.rs  transposition_table.rs
