[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = "1.0.11"
env_logger = "0.11.6"
log = "0.4.25"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"


[profile.release]
debug = 1
