[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = "1.0.11"
env_logger = "0.11.6"
log = "0.4.25"
num-integer = "0.1.46"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["rt"] }
tokio-scoped = "0.2.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"


[profile.release]
debug = 1
